@@ -6,7 +6,6 @@ import java.io.IOException;
 import java.lang.reflect.InvocationTargetException;
 import java.net.URISyntaxException;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.eclipse.jgit.api.errors.GitAPIException;
 import org.eclipse.jgit.lib.ObjectId;
@@ -18,10 +17,12 @@ import org.openlca.app.db.Repository;
 import org.openlca.app.rcp.Workspace;
 import org.openlca.app.util.Input;
 import org.openlca.app.util.Question;
+import org.openlca.core.database.CategoryDao;
 import org.openlca.core.database.Daos;
 import org.openlca.core.database.IDatabase;
 import org.openlca.core.model.ModelType;
 import org.openlca.core.model.Version;
+import org.openlca.core.model.descriptors.Descriptor;
 import org.openlca.core.model.descriptors.RootDescriptor;
 import org.openlca.git.actions.ConflictResolver;
 import org.openlca.git.actions.GitFetch;
@@ -34,8 +35,7 @@ import org.openlca.git.model.Diff;
 import org.openlca.git.model.ModelRef;
 import org.openlca.git.model.Reference;
 import org.openlca.git.util.Constants;
-import org.openlca.git.util.Diffs;
-import org.openlca.git.util.TypedRefIdMap;
+import org.openlca.git.util.ModelRefMap;
 import org.openlca.jsonld.Json;
 import org.openlca.util.Dirs;
 import org.openlca.util.Strings;
@@ -137,7 +137,7 @@ public class RepositoryUpgrade {
 				Dirs.delete(gitDir);
 			}
 			GitInit.in(gitDir).remoteUrl(url).run();
-			var repo = Repository.initialize(gitDir);
+			var repo = Repository.initialize(gitDir, Database.get());
 			if (repo == null)
 				return null;
 			if (repo.isCollaborationServer()) {
@@ -148,7 +148,7 @@ public class RepositoryUpgrade {
 					"Could not connect, this might be an older version of the collaboration server? Please specify the url to the updated repository:",
 					url);
 			if (url == null)
-				return null;				
+				return null;
 			return initGit(url, user);
 		} catch (GitAPIException | URISyntaxException e) {
 			log.warn("Error initializing git repo from " + url, e);
@@ -158,22 +158,25 @@ public class RepositoryUpgrade {
 
 	private boolean pull(Repository repo, GitCredentialsProvider credentials) {
 		try {
-			var commits = Actions.run(credentials, GitFetch.to(repo.git));
+			var commits = Actions.run(credentials, GitFetch.to(repo));
 			if (commits == null || commits.isEmpty())
 				return true;
 			var libraryResolver = WorkspaceLibraryResolver.forRemote();
 			if (libraryResolver == null)
 				return false;
-			var descriptors = new TypedRefIdMap<RootDescriptor>();
+			var descriptors = new ModelRefMap<RootDescriptor>();
 			for (var type : ModelType.values()) {
-				Daos.root(Database.get(), type).getDescriptors().forEach(d -> descriptors.put(d.type, d.refId, d));
+				if (type == ModelType.CATEGORY) {
+					new CategoryDao(Database.get()).getAll().forEach(
+							c -> descriptors.put(ModelType.CATEGORY, ModelType.CATEGORY.name() + "/" + c.toPath(), Descriptor.of(c)));
+				} else {
+					Daos.root(Database.get(), type).getDescriptors().forEach(d -> descriptors.put(d.type, d.refId, d));
+				}
 			}
 			var commit = repo.commits.find().refs(Constants.REMOTE_REF).latest();
 			boolean wasStashed = stashDifferences(repo, commit, credentials.ident, descriptors);
-			Actions.run(GitMerge.from(repo.git)
-					.into(database)
+			Actions.run(GitMerge.on(repo)
 					.as(credentials.ident)
-					.update(repo.gitIndex)
 					.resolveLibrariesWith(libraryResolver)
 					.resolveConflictsWith(new EqualResolver(descriptors)));
 			if (!wasStashed)
@@ -186,20 +189,17 @@ public class RepositoryUpgrade {
 	}
 
 	private boolean stashDifferences(Repository repo, Commit commit, PersonIdent user,
-			TypedRefIdMap<RootDescriptor> descriptors)
+			ModelRefMap<RootDescriptor> descriptors)
 			throws IOException, InvocationTargetException, InterruptedException, GitAPIException {
-		var differences = Diffs.of(repo.git, commit)
-				.with(Database.get(), repo.gitIndex).stream()
-				.filter(diff -> !equalsDescriptor(diff, descriptors.get(diff)))
-				.map(diff -> new Change(diff))
-				.collect(Collectors.toList());
+		var differences = Change.of(
+				repo.diffs.find().commit(commit).withDatabase().stream()
+						.filter(diff -> !equalsDescriptor(diff, descriptors.get(diff)))
+						.toList());
 		if (differences.isEmpty())
 			return false;
-		Actions.run(GitStashCreate.from(Database.get())
-				.to(repo.git)
+		Actions.run(GitStashCreate.on(repo)
 				.as(user)
-				.reference(commit)
-				.update(repo.gitIndex)
+				.parent(commit)
 				.changes(differences));
 		return true;
 	}
@@ -209,8 +209,10 @@ public class RepositoryUpgrade {
 			return false;
 		if (ObjectId.zeroId().equals(diff.oldObjectId))
 			return false;
+		if (diff.isCategory)
+			return true;
 		var ref = new Reference(diff.path, diff.oldCommitId, diff.oldObjectId);
-		var remoteModel = Repository.get().datasets.parse(ref, "lastChange", "version");
+		var remoteModel = Repository.CURRENT.datasets.parse(ref, "lastChange", "version");
 		if (remoteModel == null)
 			return false;
 		var version = Version.fromString(string(remoteModel, "version")).getValue();
@@ -244,9 +246,9 @@ public class RepositoryUpgrade {
 
 	private class EqualResolver implements ConflictResolver {
 
-		private final TypedRefIdMap<RootDescriptor> descriptors;
+		private final ModelRefMap<RootDescriptor> descriptors;
 
-		private EqualResolver(TypedRefIdMap<RootDescriptor> descriptors) {
+		private EqualResolver(ModelRefMap<RootDescriptor> descriptors) {
 			this.descriptors = descriptors;
 		}
 
